# aside

./: .SRCINFO  .gitignore  CLAUDE.md  Makefile  PKGBUILD  PKGBUILD-git  README.md  TESTING.md  TODO.md  meson.build  pyproject.toml  test-manual.sh
.claude/commands/: smoke-test.md
.github/: FUNDING.yml
.github/workflows/: release.yml
aside/: __init__.py  cli.py  config.py  daemon.py  keyring.py  models.py  plugins.py  query.py  state.py  status.py  tts.py
aside/actions/: window.py
aside/input/: window.py
aside/overlay/: accent_bar.py  app.py  conversation.py  css.py  markdown.py  message_view.py  picker.py  positioning.py  reply_input.py  theme.py  window.py
aside/overlay/themes/default/: style.css
aside/reply/: window.py
aside/tools/: memory.py  read_web.py
aside/voice/: audio.py  listener.py  speech_detector.py  stt.py  wake_word.py
data/: aside-daemon.service  aside-overlay.service  aside.desktop  config.toml.example
data/waybar/: aside.json
dev/: switch.sh  vm-demo.sh  vm-sync.sh
docs/: architecture.md  configuration.md  install.md  plugins.md  usage.md
docs/plans/: 2026-02-27-cli-overlay-actions-design.md  2026-02-27-cli-overlay-actions-plan.md  2026-02-27-gtk-actions-plan.md  2026-02-27-gtk-input-popup-design.md  2026-02-27-overlay-modes-design.md  2026-02-28-keyring-api-keys-design.md  2026-02-28-keyring-api-keys-plan.md  2026-02-28-model-management-design.md  2026-02-28-model-management-plan.md  2026-03-01-reply-box-cleanup-colors.md  2026-03-02-smoke-test-design.md  2026-03-02-smoke-test-plan.md  2026-03-08-gtk4-overlay-port-design.md  2026-03-08-gtk4-overlay-port-plan.md  2026-03-08-overlay-bugfix-design.md  2026-03-08-overlay-bugfix-plan.md
docs/superpowers/plans/: 2026-07-17-overlay-move-resize-commands.md  2026-07-18-convo-on-demand-keyboard.md
docs/superpowers/specs/: 2026-07-17-overlay-move-resize-commands-design.md  2026-07-18-convo-on-demand-keyboard-design.md
overlay/: meson.build
overlay/src/: config.c  config.h  main.c  render.c  render.h  shm.c  socket.c  socket.h  wayland.c  wayland.h
plugins/: screenshot.py  web_search.py
tests/: test_cli.py  test_config.py  test_daemon.py  test_input.py  test_keyring.py  test_models.py  test_overlay_accent_bar.py  test_overlay_app.py  test_overlay_conversation.py  test_overlay_css.py  test_overlay_integration.py  test_overlay_markdown.py  test_overlay_message_view.py  test_overlay_picker.py  test_overlay_positioning.py  test_overlay_reply_input.py  test_overlay_window.py  test_plugins.py  test_query.py  test_read_web.py  test_sentence_buffer.py  test_state.py  test_status.py  test_tts.py  test_voice.py
tests/vm/: setup-arch.sh  vm-test.sh
