[build-system]
requires = ["meson-python>=0.16", "meson>=0.64"]
build-backend = "mesonpy"

[project]
name = "aside-assistant"
version = "0.3.2"
description = "Wayland-native LLM desktop assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.30.0",
]

[project.optional-dependencies]
stt = ["faster-whisper==1.2.1", "webrtcvad-wheels>=2.0.10", "numpy>=2.0"]
tts = ["piper-tts", "sounddevice"]

[project.scripts]
aside = "aside.cli:main"
aside-input = "aside.input.window:main"
aside-reply = "aside.reply.window:main"
aside-status = "aside.status:main"
