[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aside-assistant"
version = "0.4.0"
description = "Wayland-native LLM desktop assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.30.0",
    "mistune>=3.0",
]

[project.optional-dependencies]
stt = ["faster-whisper==1.2.1", "webrtcvad-wheels>=2.0.10", "numpy>=2.0"]
tts = ["piper-tts", "sounddevice"]

[tool.setuptools.packages.find]
include = ["aside*"]

[project.scripts]
aside = "aside.cli:main"
aside-overlay = "aside.overlay.app:main"
aside-status = "aside.status:main"
