[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aside-assistant"
version = "0.8.0"
description = "Wayland-native LLM desktop assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.30.0",
    "mistune>=3.0",
]

[project.optional-dependencies]
stt = ["faster-whisper==1.2.1", "webrtcvad-wheels>=2.0.10", "numpy>=2.0"]
tts = ["piper-tts", "sounddevice"]

[tool.setuptools.packages.find]
include = ["aside*"]

[tool.setuptools.package-data]
"aside.overlay.themes" = ["*/style.css"]

[project.scripts]
aside = "aside.cli:main"
aside-overlay = "aside.overlay.app:main"

[tool.semantic_release]
# Runs from .github/workflows/release.yml on every push to master.
# Conventional Commits decide the bump; these two files carry the version.
version_toml = ["pyproject.toml:project.version"]
version_variables = ["PKGBUILD:pkgver"]
tag_format = "v{version}"
commit_message = "release: v{version} [skip ci]"
# Stay in 0.x: PSR v10 otherwise promotes the first release it cuts to
# 1.0.0. Flip major_on_zero to true when 1.0 is a deliberate decision.
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.branches.main]
match = "master"
